# mlops_hw

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.py  data.zip.dvc  infer.py  pyproject.toml  train.py
.dvc/: config
binary_classifier/: __init__.py  dataset.py  model.py  plots.py  trainer.py
configs/: config.yaml
data/: test_data.csv.dvc  train_data.csv.dvc
