[tool.poetry]
name = "mlops-hw"
version = "0.1.0"
description = ""
authors = ["milanakuchumova <milanakych@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
dvc = "^3.38.1"
dvc-gdrive = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
